# XM23P-Emulator

./: .gitignore  CMakeLists.txt  Load Module.xmind  design.md
assembler/scripts/: A3A4test (1).asm  A3A4test (1).lis  A3A4test (1).xme  Add01.asm  Addition.asm  ArrayInit.asm  ArrayInit.xme  Branch.asm  Branch.lis  Branch.xme  CEX.asm  CEX.lis  CEX.xme  CEX_2.asm  CEX_2.lis  CEX_2.xme  Strings.asm  Test01.asm  Test02.asm  Test03.asm  Test04.asm  Test07.asm  Test08.asm  Test09.asm  Test10.asm  Test10.lis  Test10.xme  Test11.asm  Test17.asm  Test18.asm  Test19.asm  Test20.asm  Test21.asm  Test23.asm  Test26.asm  Test28.asm  Test28.lis  Test28.xme  Test29.asm  Test29.lis  (+13 more)
design/: Decode Instruction.xmind
design/Assignment 2/: CPU Cycle.xmind  design.md
design/Assignment 3/: CPU Cycle.xmind  design.md
design/Assignment 4/: Branch Instructions.xmind  design.md
design/Assignment 5/: Conditional_Execution.xmind  design.md
design/Lab 1/: Design.xmind  (+1 more)
include/: decode_instructions.h  definitions.h  display_memory.h  execute_instructions.h  fetch_instructions.h  file.h  instruction_functions.h  load_memory.h  main.h  operating_system.h  parse_records.h  read_memory.h  utilities.h
src/: decode_instructions.c  display_memory.c  execute_instructions.c  fetch.c  fetch_instructions.c  file.c  global_functions.c  instruction_functions.c  load_memory.c  main.c  operating_system.c  parse_records.c  read_memory.c  utilities.c
tests/: Add01.xme  Addition.xme  Bad.xme  Strings.xme  Test01_Load_Instruction.xme  Test02_Load_Data.xme  Test04_Overwrite_Data.xme  debug_test.txt
(+88 files in other folders)
